Format by Intellij idea (1)