@@ -40,12 +40,12 @@ import net.minecraft.world.EnumDifficulty;
 import net.minecraft.world.World;
 
 public class EntityWither extends EntityMob implements IBossDisplayData, IRangedAttackMob {
-	private float[] field_82220_d = new float[2];
-	private float[] field_82221_e = new float[2];
-	private float[] field_82217_f = new float[2];
-	private float[] field_82218_g = new float[2];
-	private int[] field_82223_h = new int[2];
-	private int[] field_82224_i = new int[2];
+	private final float[] field_82220_d = new float[2];
+	private final float[] field_82221_e = new float[2];
+	private final float[] field_82217_f = new float[2];
+	private final float[] field_82218_g = new float[2];
+	private final int[] field_82223_h = new int[2];
+	private final int[] field_82224_i = new int[2];
 	private int blockBreakCounter;
 	private static final Predicate<Entity> attackEntitySelector = new Predicate<Entity>() {
 		public boolean apply(Entity p_apply_1_) {
@@ -65,7 +65,7 @@ public class EntityWither extends EntityMob implements IBossDisplayData, IRanged
 		this.tasks.addTask(5, new EntityAIWander(this, 1.0D));
 		this.tasks.addTask(6, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
 		this.tasks.addTask(7, new EntityAILookIdle(this));
-		this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, false, new Class[0]));
+		this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, false));
 		this.targetTasks.addTask(2,
 				new EntityAINearestAttackableTarget(this, EntityLiving.class, 0, false, false, attackEntitySelector));
 		this.experienceValue = 50;
@@ -73,10 +73,10 @@ public class EntityWither extends EntityMob implements IBossDisplayData, IRanged
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(17, new Integer(0));
-		this.dataWatcher.addObject(18, new Integer(0));
-		this.dataWatcher.addObject(19, new Integer(0));
-		this.dataWatcher.addObject(20, new Integer(0));
+		this.dataWatcher.addObject(17, Integer.valueOf(0));
+		this.dataWatcher.addObject(18, Integer.valueOf(0));
+		this.dataWatcher.addObject(19, Integer.valueOf(0));
+		this.dataWatcher.addObject(20, Integer.valueOf(0));
 	}
 
 	public void writeEntityToNBT(NBTTagCompound tagCompound) {
@@ -121,7 +121,7 @@ public class EntityWither extends EntityMob implements IBossDisplayData, IRanged
 				double d3 = d0 * d0 + d1 * d1;
 
 				if (d3 > 9.0D) {
-					double d5 = (double) MathHelper.sqrt_double(d3);
+					double d5 = MathHelper.sqrt_double(d3);
 					this.motionX += (d0 / d5 * 0.5D - this.motionX) * 0.6000000238418579D;
 					this.motionZ += (d1 / d5 * 0.5D - this.motionZ) * 0.6000000238418579D;
 				}
@@ -154,7 +154,7 @@ public class EntityWither extends EntityMob implements IBossDisplayData, IRanged
 				double d6 = entity1.posX - d11;
 				double d7 = entity1.posY + (double) entity1.getEyeHeight() - d12;
 				double d8 = entity1.posZ - d13;
-				double d9 = (double) MathHelper.sqrt_double(d6 * d6 + d8 * d8);
+				double d9 = MathHelper.sqrt_double(d6 * d6 + d8 * d8);
 				float f = (float) (MathHelper.atan2(d8, d6) * 180.0D / Math.PI) - 90.0F;
 				float f1 = (float) (-(MathHelper.atan2(d7, d9) * 180.0D / Math.PI));
 				this.field_82220_d[j] = this.func_82204_b(this.field_82220_d[j], f1, 40.0F);
@@ -173,23 +173,23 @@ public class EntityWither extends EntityMob implements IBossDisplayData, IRanged
 			this.worldObj.spawnParticle(EnumParticleTypes.SMOKE_NORMAL,
 					d10 + this.rand.nextGaussian() * 0.30000001192092896D,
 					d2 + this.rand.nextGaussian() * 0.30000001192092896D,
-					d4 + this.rand.nextGaussian() * 0.30000001192092896D, 0.0D, 0.0D, 0.0D, new int[0]);
+					d4 + this.rand.nextGaussian() * 0.30000001192092896D, 0.0D, 0.0D, 0.0D);
 
 			if (flag && this.worldObj.rand.nextInt(4) == 0) {
 				this.worldObj.spawnParticle(EnumParticleTypes.SPELL_MOB,
 						d10 + this.rand.nextGaussian() * 0.30000001192092896D,
 						d2 + this.rand.nextGaussian() * 0.30000001192092896D,
 						d4 + this.rand.nextGaussian() * 0.30000001192092896D, 0.699999988079071D, 0.699999988079071D,
-						0.5D, new int[0]);
+						0.5D);
 			}
 		}
 
 		if (this.getInvulTime() > 0) {
 			for (int i1 = 0; i1 < 3; ++i1) {
-				this.worldObj.spawnParticle(EnumParticleTypes.SPELL_MOB, this.posX + this.rand.nextGaussian() * 1.0D,
+				this.worldObj.spawnParticle(EnumParticleTypes.SPELL_MOB, this.posX + this.rand.nextGaussian(),
 						this.posY + (double) (this.rand.nextFloat() * 3.3F),
-						this.posZ + this.rand.nextGaussian() * 1.0D, 0.699999988079071D, 0.699999988079071D,
-						0.8999999761581421D, new int[0]);
+						this.posZ + this.rand.nextGaussian(), 0.699999988079071D, 0.699999988079071D,
+						0.8999999761581421D);
 			}
 		}
 	}
@@ -254,12 +254,12 @@ public class EntityWither extends EntityMob implements IBossDisplayData, IRanged
 							this.updateWatchedTargetId(i, 0);
 						}
 					} else {
-						List<EntityLivingBase> list = this.worldObj.<EntityLivingBase>getEntitiesWithinAABB(
+						List<EntityLivingBase> list = this.worldObj.getEntitiesWithinAABB(
 								EntityLivingBase.class, this.getEntityBoundingBox().expand(20.0D, 8.0D, 20.0D),
-								Predicates.<EntityLivingBase>and(attackEntitySelector, EntitySelectors.NOT_SPECTATING));
+								Predicates.and(attackEntitySelector, EntitySelectors.NOT_SPECTATING));
 
 						for (int j2 = 0; j2 < 10 && !list.isEmpty(); ++j2) {
-							EntityLivingBase entitylivingbase = (EntityLivingBase) list
+							EntityLivingBase entitylivingbase = list
 									.get(this.rand.nextInt(list.size()));
 
 							if (entitylivingbase != this && entitylivingbase.isEntityAlive()
@@ -313,7 +313,7 @@ public class EntityWither extends EntityMob implements IBossDisplayData, IRanged
 					}
 
 					if (flag) {
-						this.worldObj.playAuxSFXAtEntity((EntityPlayer) null, 1012, new BlockPos(this), 0);
+						this.worldObj.playAuxSFXAtEntity(null, 1012, new BlockPos(this), 0);
 					}
 				}
 			}
@@ -387,7 +387,7 @@ public class EntityWither extends EntityMob implements IBossDisplayData, IRanged
 	}
 
 	private void launchWitherSkullToCoords(int p_82209_1_, double x, double y, double z, boolean invulnerable) {
-		this.worldObj.playAuxSFXAtEntity((EntityPlayer) null, 1014, new BlockPos(this), 0);
+		this.worldObj.playAuxSFXAtEntity(null, 1014, new BlockPos(this), 0);
 		double d0 = this.func_82214_u(p_82209_1_);
 		double d1 = this.func_82208_v(p_82209_1_);
 		double d2 = this.func_82213_w(p_82209_1_);
