@@ -33,7 +33,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte) 0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte) 0));
 	}
 
 	public void onUpdate() {
@@ -51,7 +51,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
 
 		if (this.isMinecartPowered() && this.rand.nextInt(4) == 0) {
 			this.worldObj.spawnParticle(EnumParticleTypes.SMOKE_LARGE, this.posX, this.posY + 0.8D, this.posZ, 0.0D,
-					0.0D, 0.0D, new int[0]);
+					0.0D, 0.0D);
 		}
 	}
 
@@ -72,7 +72,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
 		double d0 = this.pushX * this.pushX + this.pushZ * this.pushZ;
 
 		if (d0 > 1.0E-4D && this.motionX * this.motionX + this.motionZ * this.motionZ > 0.001D) {
-			d0 = (double) MathHelper.sqrt_double(d0);
+			d0 = MathHelper.sqrt_double(d0);
 			this.pushX /= d0;
 			this.pushZ /= d0;
 
@@ -91,7 +91,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
 		double d0 = this.pushX * this.pushX + this.pushZ * this.pushZ;
 
 		if (d0 > 1.0E-4D) {
-			d0 = (double) MathHelper.sqrt_double(d0);
+			d0 = MathHelper.sqrt_double(d0);
 			this.pushX /= d0;
 			this.pushZ /= d0;
 			double d1 = 1.0D;
@@ -114,7 +114,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
 
 		if (itemstack != null && itemstack.getItem() == Items.coal) {
 			if (!playerIn.capabilities.isCreativeMode && --itemstack.stackSize == 0) {
-				playerIn.inventory.setInventorySlotContents(playerIn.inventory.currentItem, (ItemStack) null);
+				playerIn.inventory.setInventorySlotContents(playerIn.inventory.currentItem, null);
 			}
 
 			this.fuel += 3600;
