@@ -32,7 +32,7 @@ public class EntityBlaze extends EntityMob {
 		this.tasks.addTask(7, new EntityAIWander(this, 1.0D));
 		this.tasks.addTask(8, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
 		this.tasks.addTask(8, new EntityAILookIdle(this));
-		this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, true, new Class[0]));
+		this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, true));
 		this.targetTasks.addTask(2, new EntityAINearestAttackableTarget(this, EntityPlayer.class, true));
 	}
 
@@ -45,7 +45,7 @@ public class EntityBlaze extends EntityMob {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte) 0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte) 0));
 	}
 
 	protected String getLivingSound() {
@@ -83,8 +83,8 @@ public class EntityBlaze extends EntityMob {
 				this.worldObj.spawnParticle(EnumParticleTypes.SMOKE_LARGE,
 						this.posX + (this.rand.nextDouble() - 0.5D) * (double) this.width,
 						this.posY + this.rand.nextDouble() * (double) this.height,
-						this.posZ + (this.rand.nextDouble() - 0.5D) * (double) this.width, 0.0D, 0.0D, 0.0D,
-						new int[0]);
+						this.posZ + (this.rand.nextDouble() - 0.5D) * (double) this.width, 0.0D, 0.0D, 0.0D
+                );
 			}
 		}
 
@@ -156,7 +156,7 @@ public class EntityBlaze extends EntityMob {
 	}
 
 	static class AIFireballAttack extends EntityAIBase {
-		private EntityBlaze blaze;
+		private final EntityBlaze blaze;
 		private int field_179467_b;
 		private int field_179468_c;
 
@@ -213,7 +213,7 @@ public class EntityBlaze extends EntityMob {
 
 					if (this.field_179467_b > 1) {
 						float f = MathHelper.sqrt_float(MathHelper.sqrt_double(d0)) * 0.5F;
-						this.blaze.worldObj.playAuxSFXAtEntity((EntityPlayer) null, 1009,
+						this.blaze.worldObj.playAuxSFXAtEntity(null, 1009,
 								new BlockPos((int) this.blaze.posX, (int) this.blaze.posY, (int) this.blaze.posZ), 0);
 
 						for (int i = 0; i < 1; ++i) {
