@@ -39,13 +39,13 @@ public class EntitySpider extends EntityMob {
 		this.tasks.addTask(5, new EntityAIWander(this, 0.8D));
 		this.tasks.addTask(6, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
 		this.tasks.addTask(6, new EntityAILookIdle(this));
-		this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, false, new Class[0]));
+		this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, false));
 		this.targetTasks.addTask(2, new EntitySpider.AISpiderTarget(this, EntityPlayer.class));
 		this.targetTasks.addTask(3, new EntitySpider.AISpiderTarget(this, EntityIronGolem.class));
 	}
 
 	public double getMountedYOffset() {
-		return (double) (this.height * 0.5F);
+		return this.height * 0.5F;
 	}
 
 	protected PathNavigate getNewNavigator(World worldIn) {
@@ -54,7 +54,7 @@ public class EntitySpider extends EntityMob {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte) 0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte) 0));
 	}
 
 	public void onUpdate() {
@@ -111,7 +111,7 @@ public class EntitySpider extends EntityMob {
 	}
 
 	public boolean isPotionApplicable(PotionEffect potioneffectIn) {
-		return potioneffectIn.getPotionID() == Potion.poison.id ? false : super.isPotionApplicable(potioneffectIn);
+		return potioneffectIn.getPotionID() != Potion.poison.id && super.isPotionApplicable(potioneffectIn);
 	}
 
 	public boolean isBesideClimbableBlock() {
@@ -136,7 +136,7 @@ public class EntitySpider extends EntityMob {
 		if (this.worldObj.rand.nextInt(100) == 0) {
 			EntitySkeleton entityskeleton = new EntitySkeleton(this.worldObj);
 			entityskeleton.setLocationAndAngles(this.posX, this.posY, this.posZ, this.rotationYaw, 0.0F);
-			entityskeleton.onInitialSpawn(difficulty, (IEntityLivingData) null);
+			entityskeleton.onInitialSpawn(difficulty, null);
 			this.worldObj.spawnEntityInWorld(entityskeleton);
 			entityskeleton.mountEntity(this);
 		}
@@ -174,7 +174,7 @@ public class EntitySpider extends EntityMob {
 			float f = this.attacker.getBrightness(1.0F);
 
 			if (f >= 0.5F && this.attacker.getRNG().nextInt(100) == 0) {
-				this.attacker.setAttackTarget((EntityLivingBase) null);
+				this.attacker.setAttackTarget(null);
 				return false;
 			} else {
 				return super.continueExecuting();
@@ -182,7 +182,7 @@ public class EntitySpider extends EntityMob {
 		}
 
 		protected double func_179512_a(EntityLivingBase attackTarget) {
-			return (double) (4.0F + attackTarget.width);
+			return 4.0F + attackTarget.width;
 		}
 	}
 
@@ -193,7 +193,7 @@ public class EntitySpider extends EntityMob {
 
 		public boolean shouldExecute() {
 			float f = this.taskOwner.getBrightness(1.0F);
-			return f >= 0.5F ? false : super.shouldExecute();
+			return !(f >= 0.5F) && super.shouldExecute();
 		}
 	}
 
