@@ -23,7 +23,7 @@ public class EntityBat extends EntityAmbientCreature {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte) 0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte) 0));
 	}
 
 	protected float getSoundVolume() {
@@ -94,7 +94,7 @@ public class EntityBat extends EntityAmbientCreature {
 		if (this.getIsBatHanging()) {
 			if (!this.worldObj.getBlockState(blockpos1).getBlock().isNormalCube()) {
 				this.setIsBatHanging(false);
-				this.worldObj.playAuxSFXAtEntity((EntityPlayer) null, 1015, blockpos, 0);
+				this.worldObj.playAuxSFXAtEntity(null, 1015, blockpos, 0);
 			} else {
 				if (this.rand.nextInt(200) == 0) {
 					this.rotationYawHead = (float) this.rand.nextInt(360);
@@ -102,7 +102,7 @@ public class EntityBat extends EntityAmbientCreature {
 
 				if (this.worldObj.getClosestPlayerToEntity(this, 4.0D) != null) {
 					this.setIsBatHanging(false);
-					this.worldObj.playAuxSFXAtEntity((EntityPlayer) null, 1015, blockpos, 0);
+					this.worldObj.playAuxSFXAtEntity(null, 1015, blockpos, 0);
 				}
 			}
 		} else {
@@ -112,8 +112,8 @@ public class EntityBat extends EntityAmbientCreature {
 			}
 
 			if (this.spawnPosition == null || this.rand.nextInt(30) == 0
-					|| this.spawnPosition.distanceSq((double) ((int) this.posX), (double) ((int) this.posY),
-							(double) ((int) this.posZ)) < 4.0D) {
+					|| this.spawnPosition.distanceSq((int) this.posX, (int) this.posY,
+                    (int) this.posZ) < 4.0D) {
 				this.spawnPosition = new BlockPos((int) this.posX + this.rand.nextInt(7) - this.rand.nextInt(7),
 						(int) this.posY + this.rand.nextInt(6) - 2,
 						(int) this.posZ + this.rand.nextInt(7) - this.rand.nextInt(7));
@@ -187,7 +187,7 @@ public class EntityBat extends EntityAmbientCreature {
 				return false;
 			}
 
-			return i > this.rand.nextInt(j) ? false : super.getCanSpawnHere();
+			return i <= this.rand.nextInt(j) && super.getCanSpawnHere();
 		}
 	}
 
