@@ -14,6 +14,7 @@ import java.net.Proxy;
 import java.net.ServerSocket;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.concurrent.Executors;
@@ -45,21 +46,13 @@ public class HttpUtil {
 				stringbuilder.append('&');
 			}
 
-			try {
-				stringbuilder.append(URLEncoder.encode((String) entry.getKey(), "UTF-8"));
-			} catch (UnsupportedEncodingException unsupportedencodingexception1) {
-				unsupportedencodingexception1.printStackTrace();
-			}
+            stringbuilder.append(URLEncoder.encode((String) entry.getKey(), StandardCharsets.UTF_8));
 
-			if (entry.getValue() != null) {
+            if (entry.getValue() != null) {
 				stringbuilder.append('=');
 
-				try {
-					stringbuilder.append(URLEncoder.encode(entry.getValue().toString(), "UTF-8"));
-				} catch (UnsupportedEncodingException unsupportedencodingexception) {
-					unsupportedencodingexception.printStackTrace();
-				}
-			}
+                stringbuilder.append(URLEncoder.encode(entry.getValue().toString(), StandardCharsets.UTF_8));
+            }
 		}
 
 		return stringbuilder.toString();
@@ -103,7 +96,7 @@ public class HttpUtil {
 			return stringbuffer.toString();
 		} catch (Exception exception) {
 			if (!skipLoggingErrors) {
-				logger.error((String) ("Could not post to " + url), (Throwable) exception);
+				logger.error("Could not post to " + url, exception);
 			}
 
 			return "";
@@ -130,10 +123,10 @@ public class HttpUtil {
 						URL url = new URL(packUrl);
 						httpurlconnection = (HttpURLConnection) url.openConnection(p_180192_5_);
 						float f = 0.0F;
-						float f1 = (float) p_180192_2_.entrySet().size();
+						float f1 = (float) p_180192_2_.size();
 
 						for (Entry<String, String> entry : p_180192_2_.entrySet()) {
-							httpurlconnection.setRequestProperty((String) entry.getKey(), (String) entry.getValue());
+							httpurlconnection.setRequestProperty(entry.getKey(), entry.getValue());
 
 							if (p_180192_4_ != null) {
 								p_180192_4_.setLoadingProgress((int) (++f / f1 * 100.0F));
@@ -146,7 +139,7 @@ public class HttpUtil {
 
 						if (p_180192_4_ != null) {
 							p_180192_4_.displayLoadingString(String.format("Downloading file (%.2f MB)...",
-									new Object[] { Float.valueOf(f1 / 1000.0F / 1000.0F) }));
+                                    Float.valueOf(f1 / 1000.0F / 1000.0F)));
 						}
 
 						if (saveFile.exists()) {
@@ -211,8 +204,7 @@ public class HttpUtil {
 
 						if (p_180192_4_ != null) {
 							p_180192_4_.setDoneWorking();
-							return;
-						}
+                        }
 					} catch (Throwable throwable) {
 						throwable.printStackTrace();
 
@@ -228,8 +220,7 @@ public class HttpUtil {
 
 						if (p_180192_4_ != null) {
 							p_180192_4_.setDoneWorking();
-							return;
-						}
+                        }
 					}
 				} finally {
 					IOUtils.closeQuietly(inputstream);
@@ -253,8 +244,7 @@ public class HttpUtil {
 					serversocket.close();
 				}
 			} catch (IOException var8) {
-				;
-			}
+            }
 		}
 
 		return i;
