@@ -4,7 +4,7 @@ public class IntegerCache {
 	private static final Integer[] CACHE = new Integer[65535];
 
 	public static Integer getInteger(int value) {
-		return value >= 0 && value < CACHE.length ? CACHE[value] : new Integer(value);
+		return value >= 0 && value < CACHE.length ? CACHE[value] : Integer.valueOf(value);
 	}
 
 	static {
