@@ -4,15 +4,15 @@ import java.util.HashMap;
 import java.util.Map;
 
 public class TimedEvent {
-	private static Map<String, Long> mapEventTimes = new HashMap();
+	private static final Map<String, Long> mapEventTimes = new HashMap();
 
 	public static boolean isActive(String name, long timeIntervalMs) {
 		synchronized (mapEventTimes) {
 			long i = System.currentTimeMillis();
-			Long olong = (Long) mapEventTimes.get(name);
+			Long olong = mapEventTimes.get(name);
 
 			if (olong == null) {
-				olong = new Long(i);
+				olong = Long.valueOf(i);
 				mapEventTimes.put(name, olong);
 			}
 
@@ -21,7 +21,7 @@ public class TimedEvent {
 			if (i < j + timeIntervalMs) {
 				return false;
 			} else {
-				mapEventTimes.put(name, new Long(i));
+				mapEventTimes.put(name, Long.valueOf(i));
 				return true;
 			}
 		}
